--- a/app/src/main/res/layout/list_item_textview.xml
+++ b/app/src/main/res/layout/list_item_textview.xml
@@ -5,6 +5,6 @@
     android:id="@+id/list_item_textview"
     android:padding="16dp"
     android:textSize="16dp"
-    android:fontFamily="sans-serif-medium"
+    android:fontFamily="sans-serif"
     >
 </TextView>
