--- a/app/src/main/res/layout/gymnast.xml
+++ b/app/src/main/res/layout/gymnast.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card"
         android:layout_width="360dp"
-        android:layout_height="282dp"
+        android:layout_height="258dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -26,7 +26,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorAccent">
+                android:background="@color/grey">
 
                 <TextView
                     android:id="@+id/textView"
