--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#32eff5</color>
     <color name="colorPrimaryDark">#32dac5</color>
     <color name="colorAccent">#ff98c6</color>
+    <color name="grey">#f2f2f2</color>
 </resources>
