--- a/app/src/main/res/layout/gymnast.xml
+++ b/app/src/main/res/layout/gymnast.xml
@@ -16,8 +16,10 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.115">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
